# camscan

./: .gitignore  LICENSE  README.md  app.py  camera.py  postprocessing.py  pyproject.toml  requirements.txt  requirements_linux.txt  requirements_windows.txt  scanner.py  utils.py
.github/workflows/: format.yml  lint.yml  test.yml
app/: app.py  camera.py  config.py  export.py  utils.py  widgets.py
app/widgets/: camera_config.py  camera_feed.py  capture_entry.py  image_viewer.py  tooltip.py
camscan/: __init__.py  app.py  postprocessing.py  scanner.py  widgets.py
tests/: test_scanner.py
